--- a/ms.tex
+++ b/ms.tex
@@ -25,7 +25,8 @@
 \begin{abstract}  
 \noindent
 We examine the prospects of detecting demagnified images of gravitational lenses in observations of strongly lensed mm-wave molecular emission lines with ALMA. We model the lensing galaxies as a superposition of a dark matter component, a stellar component, and a central supermassive black hole and forecast the detection of the central images for a range of relevant parameters (e.g. stellar core and black hole mass).
-We find that over a large range of acceptable parameters, future deep observations of lensed molecular lines with ALMA should be able to detect the central images at $\gtrsim 3\sigma$ significance. We use a Fisher analysis to examine the  constraints that could be placed on these parameters in various scenarios and find that for large stellar cores, both the core size and the mass of the central SMBHs could be measured. We also study the prospects of detecting binary SMBHs with such observations, and find that under rare conditions we may be able to measure the massed of both SMBHs using the distortions of the central images.
+We find that over a large range of plausible parameters, future deep observations of lensed molecular lines with ALMA should be able to detect the central images at $\gtrsim 3\sigma$ significance. We use a Fisher analysis to examine the  constraints that could be placed on these parameters in various scenarios and find that for large stellar cores, both the core size and the mass of the central SMBHs can be accurately measured. We also study the prospects of detecting binary SMBHs with such observations and find that only under rare conditions and with very long integrations ($\sim$40-hr) the massed of both SMBHs may be measured using the distortions of central images.
+
 
 \end{abstract}
 
@@ -34,15 +35,14 @@ We find that over a large range of acceptable parameters, future deep observatio
 
 \keywords{ black hole physics ---
 gravitational lensing: strong ---
-galaxies: formation ---
-galaxies: high-redshift}
+galaxies: formation}
 
 
 
 \section{introduction}
 %\begin{framed}
 Probing the matter distribution in the innermost kpc of galaxies can answer key questions about super massive black holes (SMBH), galaxy formation, and dark matter. It is now established that almost every massive galaxy harbors a SMBH at its center with a mass that strongly correlates with the mass of the host galaxy \citep{Kormendy:95,Ferrarese:00,Gebhardt:00,Tremaine:02}.
-In addition, the distribution of stellar populations in central regions of galaxies contains information about their past merger histories and SMBH-stellar population interactions. \citep[e.g][]{Barnes:92,Ebisuzaki:91}.  Various dark matter models also predict different structures for the central regions of dark matter halos \citep[e.g][]{Rocha:13}.  Mapping the matter density in the central regions of galaxies can thus shed light on various astrophysical phenomena.
+In addition, the distribution of stellar populations in central regions of galaxies contains information about their past merger histories and SMBH-stellar population interactions \citep[e.g.,][]{Barnes:92,Ebisuzaki:91}.  Various dark matter models also predict different structures for the central regions of dark matter halos \citep[e.g.,][]{Rocha:13}.  Mapping the matter density in the central regions of galaxies can thus shed light on various astrophysical phenomena.
 %probing the inner 0.5 kpc of galaxies is interesting. 1) they contain SMBHs and the relationship of the SMBH mass to galaxies is intriguing and interesting. Dark matter models also have different and interesting predictions for the density of the central regions of galaxies (e.g. cored DM, or SIDM predictions). In addition, the history of galaxy mergers and black hole-stellar population interactions can be encoded in the stellar light profiles, resulting in different stellar  
 %\end{framed}
 
@@ -50,12 +50,12 @@ In addition, the distribution of stellar populations in central regions of galax
 %Stellar light profiles:
 %\\ \\
 Studies of local galaxies in optical wavelengths have shown that, unlike their lower-mass counterparts, the most massive elliptical galaxies often exhibit cored stellar light profiles, with core sizes ranging from 50 to 500 pc \citep[e.g.,][]{Ferrarese:06}. 
-These galaxies are thought to form through gas-poor mergers. In such mergers, the central structure of the resulting galaxy is dominated by the inner structure of the more concentrated progenitor.  Since high-mass ellipticals are thought to form from mergers of their lower-mass counterparts, with steep profiles, the existence of cores in these galaxies represents a challenge to our understanding of galaxy mergers. Cores in massive ellipticals, therefore, should be the result of different (not merger) mechanisms.  
+These galaxies are thought to form through gas-poor mergers. In such mergers, the central structure of the resulting galaxy is dominated by the inner structure of the more concentrated progenitor.  Since high-mass ellipticals are thought to form from mergers of their lower-mass counterparts, with steep profiles, the existence of cores in these galaxies represents a challenge to our understanding of galaxy mergers. Cores in massive ellipticals, therefore, may be the result of a different (not merger) process.  
 ``Black hole scouring'' is a plausible mechanism that can explain core-formation in these galaxies \citep{Thomas:14}.
 %\end{framed}
 
 %\begin{framed}
-It is thought that during a merger, the SMBHs of the two merging galaxies form a binary which sinks to the center of the potential. The two orbiting SMBHs then dissipate angular momentum through three-body interactions with nearby central stars, pushing the stars to higher orbits and ``scouring out'' a core. This angular momentum loss then allows the two black holes to merge \citep{Begelman:80}.
+It is thought that during a merger, the SMBHs of the two merging galaxies form a binary, which sinks to the center of the potential. The two orbiting SMBHs then dissipate angular momentum through three-body interactions with nearby central stars, pushing the stars to higher orbits and ``scouring out'' a core. This angular momentum loss then allows the two black holes to merge \citep{Begelman:80}.
 Previous studies have shown that the core sizes in these galaxies scale with the mass of their SMBHs, in agreement with theoretical predictions \citep{Kormendy:09,Kormendy:13}.
 Such measurements, however have been limited to low redshifts, since both dynamical measurements to constrain the stellar and SMBH masses, and morphological measurements to constrain core sizes require very high physical resolutions. 
 % ... whatever the mechanisms are, clear measurements of the central densities can be valuable to solve this puzzle and to shed light on the connection of SMBHs and galaxies. 
@@ -63,7 +63,8 @@ Such measurements, however have been limited to low redshifts, since both dynami
 
 %\begin{framed}
 Strong gravitational lensing is a powerful tool for probing the matter distribution in distant galaxies. Among other things, strong lenses have been used to constrain galaxy masses  \citep[e.g.][]{}, density profiles \citep[e.g.][]{}, and abundance of dark matter subhalos \citep[e.g.][]{}.
-The strong lensing theory indicates that the number of lensed images should always be odd. For double and quad image configurations, a third and a fifth image are predicted to exist near the centers of lensing galaxies. Unlike the other lensed images, which are magnified, this image can be significantly \emph{demagnified}, making its detection difficult \citep{}.  It is well-understood that the magnification of the central images is very sensitive to the matter distribution in the innermost regions of lens galaxies: very steep singular density profiles significantly demagnify the central images, whereas cored or shallow profiles render them brighter. %Lack of detection of central images in almost all lenses suggests steep central density profiles in lens galaxies. 
+The strong lensing theory indicates that the number of lensed images should always be odd. For double and quad image configurations, a third and a fifth image are predicted to exist near the centers of lensing galaxies. Unlike the other lensed images, which are magnified, this image can be significantly \emph{demagnified}, making its detection difficult \citep[e.g.,][]{Jackson:13}.  It is well-understood that the magnification of the central images is very sensitive to the matter distribution in the innermost regions of lens galaxies: very steep singular density profiles significantly demagnify the central images, whereas cored or shallow profiles render them brighter. %Lack of detection of central images in almost all lenses suggests steep central density profiles in lens galaxies. 
+
 In addition to their low flux, the fact that central images coincide with the emission from lens galaxies makes their detection even harder. Distinguishing the central images from emission originating in the lens galaxies is extremely challenging.
 Moreover, if observed in the optical, absorption in the central dense regions of the lens can make the central images even dimmer, while the photon noise from the lens emission further reduces the sensitivity. 
 
@@ -79,7 +80,7 @@ Moreover, if observed in the optical, absorption in the central dense regions of
 
 The individual behavior and statistical properties of central images in lensed populations have been extensively studied \citep[e.g.][]{Wallington:93, Evans:02, Keeton:03}. These studies show that central images could have a wide range of magnifications \citep[e.g.,][]{Keeton:03}. 
 Observational searches for these images have found a number of candidates \citep[e.g.][]{}. Although observations
-of central images in group and cluster lenses are not uncommon \citep[e.g.,][]{Inada:05}, only one secure detections of a central image of a galaxy-scale lens exists to date \citep{Winn:04}. To avoid the possibility of absorption in the lens, most searches have focused on strongly lensed radio quasars and the radio spectrum of candidate central images have been used to distinguish them from potential faint emission from the lens galaxies.
+of central images in group and cluster lenses are not uncommon \citep[e.g.,][]{Inada:05}, only one secure detections of a central image of a galaxy-scale lens exists to date \citep{Winn:04}. To avoid the possibility of absorption in the lens, most searches have focused on lensed radio quasars and the radio spectrum of candidate central images have been used to distinguish them from potential faint emission from the lens galaxies.
 
 %To avoid confusion between a central image and faint radio emission from the lens galaxies 
 
@@ -95,12 +96,13 @@ of central images in group and cluster lenses are not uncommon \citep[e.g.,][]{I
 
 %\begin{framed}
 A new large population of strong lenses has recently been discovered in mm-bands. These systems were initially detected as bright point sources in wide area mm/submm surveys \citep{vieira:10,negrello:10}. Follow-up observations have confirmed that they constitute a large population of strong lenses \citep{vieira:13, hezaveh:13b, bussmann:13}.
-In particular, ALMA observations of these sources have revealed that the background galaxies are dusty, starburst, high redshift galaxies, containing a wealth of cold molecular gas \citep{Weiss:13}.  These observations showed that the extreme brightness of the sources in combination with the high sensitivity of ALMA results in very high signal to noise ratios \citep[e.g. the lens models in][were based on just $\sim50$ second long observations]{hezaveh:13b}.
+In particular, ALMA observations of these sources have revealed that the background galaxies are dusty, starburst, high redshift galaxies, containing a wealth of cold molecular gas \citep{Weiss:13}.  These observations showed that the extreme brightness of the sources, in combination with the high sensitivity of ALMA, result in very high signal to noise observations \citep[e.g., the lens models in][were based on just $\sim50$ second long observations]{hezaveh:13b}.
 Motivated by the discovery of this population and the operation of ALMA, here we revisit the issue of detecting central images.
-Deep ALMA observations of molecular line emission in these sources are likely to be carried out for various reasons \citep[e.g.,][]{hezaveh:14a,hezaveh:14b}. If a central image of a lensed molecular line is detected, it will be readily identifiable since it will correspond to the redshift of the source, leaving no doubt about its origin. In addition, since these lines are in mm-bands, the line fluxes are very unlikely to be suppressed due to absorption in the lens. 
-In contrast to lensed quasars, these sources are extended over hundreds of parsecs and can cover a larger area of the source plane. This can allow them to occupy the less demagnified regions of the source plane, allowing a higher flux for the central image \citep[the opposite effect of magnification damping due to extended sources, see e.g.,][]{hezaveh:11}.
+Deep ALMA observations of molecular line emission in these sources are likely to be carried out for various reasons \citep[e.g.,][]{hezaveh:14a,hezaveh:14b}. If a central image of a lensed molecular line is detected, it will be readily identifiable since it will correspond to the redshift of the source, leaving no doubt about its origin. In addition, since these lines are in mm-wave, the line fluxes are very unlikely to be suppressed by absorption in the lens. 
+In contrast to lensed quasars, these sources are extended over hundreds of parsecs and can cover a larger area of the source plane. This can allow them to occupy the less demagnified regions of the source plane, allowing a higher flux for the central image \citep[similar to magnification damping of highly magnified images due to finite source effects, see e.g.,][]{hezaveh:11}.
 
- In this letter, we explore the possibility of detecting central lensed images in such deep observations and investigate the constraints that could be placed on the core size, mass of SMBHs, and the slope of the density profiles from detection, or non-detection of such images. We also examine if binary SMBHs can possibly be detected in such observations. 
+ In this letter, we explore the possibility of detecting central lensed images in such deep observations and investigate the constraints that could be placed on the core size, mass of SMBHs, and the slope of the density profiles from detection, or non-detection of such images. We also examine if 
+ such observations can possibly detect binary SMBHs, using the distortions they may cause in the central images. 
  In Section 2 we describe the simulations, in Section 3 we present the results and discuss them, and finally conclude in Section 4. We use a flat $\Lambda$CDM cosmology with $h=0.71$ and $\Omega_M=0.267$.
  
 % the distribution of matter in the innermost regions of galaxies from detection or non-detection of such central images.\\ \\
@@ -127,15 +129,15 @@ In contrast to lensed quasars, these sources are extended over hundreds of parse
 
 
 \section{Simulations}
-We generated lensed images of background sources, predicted ALMA visibilities, and used them to estimate the detection significance of central images for various parameters. We simulated observations of a high-$J$ CO line. The line is assumed to have a velocity integrated flux of 1 Jy km/s and a FWHM of 400 km/s, resulting in an average flux of 2.5 mJy over a 400 km/s band. 
+We generated lensed images of background sources, predicted ALMA visibilities, and used them to estimate the detection significance of central images for various parameters. We simulated observations of a high-$J$ CO line. The line is assumed to have a velocity integrated flux of 1 Jy km/s and a FWHM of 400 km/s, resulting in an average flux of 2.5 mJy over a 400 km/s band \citep{Bothwell:12}. 
 
-We modeled the lens potential as a sum of three components: dark matter, stellar population and central SMBH. The dark matter was modeled as a singular power-law with a slope of 0.1, in agreement with the projected surface mass density of the NFW profile \citep{Golse:02}. As by pointed out by \citep{Keeton:03}, due to its extreme flatness in these regimes, the dark matter component has negligible influence on the central images. 
-The stellar population is modeled as a a core power-law, $\Sigma\propto (r^2+R_{\mathrm{core}}^2)^{\gamma}$. Figure \ref{fig2} shows the stellar component (red curve), dark matter component (black dashed curve) and the sum of the two (black solid curved). The grey dashed curves show a few example of core-sersic models with parameters taken from \citet{Ferrarese:06}. Although the cored power-law model used in this work does not account for the slope of the stellar distribution below the core break, it is a close fit and a reasonable model to approximate the observed stellar light profiles. 
+We modeled the lens potential as a sum of three components: dark matter, stellar population and a central SMBH. The dark matter component was modeled as a singular power-law with a slope of 0.1, in agreement with the projected surface mass density of the NFW profile in the innermost regions \citep{Golse:02}. As  pointed out by \citet{Keeton:03}, due to its extreme flatness in these regimes, the dark matter component has negligible influence on the central images. 
+The stellar population is modeled as a a cored power-law, $\Sigma(r)\propto (r^2+R_{\mathrm{core}}^2)^{\gamma}$. Figure \ref{fig2} shows the stellar component (red curve), dark matter component (black dashed curve) and the sum of the two (black solid curve). The grey dashed curves show a few examples of core-sersic models with parameters taken from \citet{Ferrarese:06}. Although the cored power-law model used in this work does not account for the slope of the stellar distribution below the core break, it is a close fit and a reasonable model to approximate the observed stellar light profiles in the inner few kpc. 
 The black hole was modeled as a simple point mass at the center of the potential. We assumed that all the three components are concentric.
-The stellar and dark mass of the lens were normalized such that they each add up to $1.5\times10^11 M_{\odot}$ in a radius of 10 kpc. The resulting Einstein radius if of order 1 arcsec, in agreement with galaxy-galaxy strong lenses \citep[e.g.,][]{}.
+The stellar and dark mass of the lens were normalized such that they each contain $1.5\times10^{11} M_{\odot}$ in a radius of 10 kpc. The resulting Einstein radius is of order 1 arcsec, in agreement with galaxy-galaxy strong lenses \citep[e.g.,][]{}.
 %lens mass was set to XX $M_{\odot}$ resulting in an Einstein radius of $\sim XX''$, in agreement with galaxy-galaxy strong lenses. We divide this mass equally (in a radius of 10 kpc) between stellar and dark matter. 
-To predict the visibilities we calculated the ALMA $uv$-coverage for a 5-$hr$ long observation (full array), using the $simobserve$ task of Common Astronomy Software Applications package, for an observing frequency of 150 GHz. 
-The visibilities for each channel were calculated by computing the 2D Fourier transform of the surface brightness data maps and resampling the Fourier transform maps over the uv-coverage. 
+To predict the visibilities we calculated the ALMA $uv$-coverage of a 10-$hr$ long observation (full array), using the $simobserve$ task of Common Astronomy Software Applications package, for an observing frequency of 150 GHz. 
+The model visibilities were calculated by computing the 2D Fourier transform of the surface brightness data maps and resampling the Fourier transform maps over the $uv$-coverage. 
 The noise was estimated using ALMA sensitivity calculator for a channel width of 400 km/s at 150 GHz. 
 
 
@@ -236,8 +238,7 @@ We also find that when the core size is larger, the constraints on the density p
 \begin{figure}
 \begin{center}
 \centering
-\includegraphics[trim= 0 0 0 0, width=0.45\textwidth]{figures/f_04_A.eps}
-\includegraphics[trim= 0 0 0 0, width=0.45\textwidth]{figures/f_04_B.eps}
+\includegraphics[trim= 0 0 0 0, width=0.45\textwidth]{figures/f_04.eps}
 \centering
 \end{center}
 \caption{ Parameter covariance matrices for two simulations (after marginalization over nuisance parameters). Top panel shows that when the core size is small the mass of the SMBH is not measured and only an upper limit can be placed on it. The bottom panel, shows that for larger core sizes, the mass of the SMBH could be measured by high significance. 
@@ -292,184 +293,8 @@ We also studied the possibility of detecting binary SMBHs and found that only un
 \red{Acknowledge NSF?}}
 
 \bibliographystyle{apj}
-%\bibliography{references}
+\bibliography{references}
 
 %\input{ms.bbl}
-\begin{thebibliography}{28}
-\expandafter\ifx\csname natexlab\endcsname\relax\def\natexlab#1{#1}\fi
-
-\bibitem[{{Barnes} \& {Hernquist}(1992)}]{Barnes:92}
-{Barnes}, J.~E., \& {Hernquist}, L. 1992, \araa, 30, 705
-
-\bibitem[{{Begelman} {et~al.}(1980){Begelman}, {Blandford}, \&
-  {Rees}}]{Begelman:80}
-{Begelman}, M.~C., {Blandford}, R.~D., \& {Rees}, M.~J. 1980, \nat, 287, 307
-
-\bibitem[{{Bussmann} {et~al.}(2013){Bussmann}, {P{\'e}rez-Fournon}, {Amber},
-  {Calanog}, {Gurwell}, {Dannerbauer}, {De Bernardis}, {Fu}, {Harris}, {Krips},
-  {Lapi}, {Maiolino}, {Omont}, {Riechers}, {Wardlow}, {Baker}, {Birkinshaw},
-  {Bock}, {Bourne}, {Clements}, {Cooray}, {De Zotti}, {Dunne}, {Dye}, {Eales},
-  {Farrah}, {Gavazzi}, {Gonz{\'a}lez Nuevo}, {Hopwood}, {Ibar}, {Ivison},
-  {Laporte}, {Maddox}, {Mart{\'{\i}}nez-Navajas}, {Michalowski}, {Negrello},
-  {Oliver}, {Roseboom}, {Scott}, {Serjeant}, {Smith}, {Smith}, {Streblyanska},
-  {Valiante}, {van der Werf}, {Verma}, {Vieira}, {Wang}, \&
-  {Wilner}}]{bussmann:13}
-{Bussmann}, R.~S., {P{\'e}rez-Fournon}, I., {Amber}, S., {et~al.} 2013, \apj,
-  779, 25, 1309.0836
-
-\bibitem[{{Ebisuzaki} {et~al.}(1991){Ebisuzaki}, {Makino}, \&
-  {Okumura}}]{Ebisuzaki:91}
-{Ebisuzaki}, T., {Makino}, J., \& {Okumura}, S.~K. 1991, \nat, 354, 212
-
-\bibitem[{{Evans} \& {Hunter}(2002)}]{Evans:02}
-{Evans}, N.~W., \& {Hunter}, C. 2002, \apj, 575, 68, astro-ph/0204206
-
-\bibitem[{{Ferrarese} \& {Merritt}(2000)}]{Ferrarese:00}
-{Ferrarese}, L., \& {Merritt}, D. 2000, \apjl, 539, L9, astro-ph/0006053
-
-\bibitem[{{Ferrarese} {et~al.}(2006){Ferrarese}, {C{\^o}t{\'e}}, {Jord{\'a}n},
-  {Peng}, {Blakeslee}, {Piatek}, {Mei}, {Merritt}, {Milosavljevi{\'c}},
-  {Tonry}, \& {West}}]{Ferrarese:06}
-{Ferrarese}, L., {C{\^o}t{\'e}}, P., {Jord{\'a}n}, A., {et~al.} 2006, \apjs,
-  164, 334, astro-ph/0602297
-
-\bibitem[{{Gebhardt} {et~al.}(2000){Gebhardt}, {Bender}, {Bower}, {Dressler},
-  {Faber}, {Filippenko}, {Green}, {Grillmair}, {Ho}, {Kormendy}, {Lauer},
-  {Magorrian}, {Pinkney}, {Richstone}, \& {Tremaine}}]{Gebhardt:00}
-{Gebhardt}, K., {Bender}, R., {Bower}, G., {et~al.} 2000, \apjl, 539, L13,
-  astro-ph/0006289
-
-\bibitem[{{Golse} \& {Kneib}(2002)}]{Golse:02}
-{Golse}, G., \& {Kneib}, J.-P. 2002, \aap, 390, 821, astro-ph/0112138
-
-\bibitem[{{Hezaveh} {et~al.}(2014){Hezaveh}, {Dalal}, {Holder}, {Kisner}, \&
-  {Kuhlen}}]{hezaveh:14a}
-{Hezaveh}, Y., {Dalal}, N., {Holder}, G., {Kisner}, T., \& {Kuhlen}, M. 2014,
-  ArXiv e-prints, 1403.2720
-
-\bibitem[{{Hezaveh}(2014)}]{hezaveh:14b}
-{Hezaveh}, Y.~D. 2014, \apjl, 791, L41, 1408.3631
-
-\bibitem[{{Hezaveh} \& {Holder}(2011)}]{hezaveh:11}
-{Hezaveh}, Y.~D., \& {Holder}, G.~P. 2011, \apj, 734, 52, 1010.0998
-
-\bibitem[{{Hezaveh} {et~al.}(2013){Hezaveh}, {Marrone}, {Fassnacht}, {Spilker},
-  {Vieira}, {Aguirre}, {Aird}, {Aravena}, {Ashby}, {Bayliss}, {Benson},
-  {Bleem}, {Bothwell}, {Brodwin}, {Carlstrom}, {Chang}, {Chapman}, {Crawford},
-  {Crites}, {De Breuck}, {de Haan}, {Dobbs}, {Fomalont}, {George}, {Gladders},
-  {Gonzalez}, {Greve}, {Halverson}, {High}, {Holder}, {Holzapfel}, {Hoover},
-  {Hrubes}, {Husband}, {Hunter}, {Keisler}, {Lee}, {Leitch}, {Lueker},
-  {Luong-Van}, {Malkan}, {McIntyre}, {McMahon}, {Mehl}, {Menten}, {Meyer},
-  {Mocanu}, {Murphy}, {Natoli}, {Padin}, {Plagge}, {Reichardt}, {Rest}, {Ruel},
-  {Ruhl}, {Sharon}, {Schaffer}, {Shaw}, {Shirokoff}, {Stalder}, {Staniszewski},
-  {Stark}, {Story}, {Vanderlinde}, {Wei{\ss}}, {Welikala}, \&
-  {Williamson}}]{hezaveh:13b}
-{Hezaveh}, Y.~D., {Marrone}, D.~P., {Fassnacht}, C.~D., {et~al.} 2013, \apj,
-  767, 132, 1303.2722
-
-\bibitem[{{Inada} {et~al.}(2005){Inada}, {Oguri}, {Keeton}, {Eisenstein},
-  {Castander}, {Chiu}, {Hall}, {Hennawi}, {Johnston}, {Pindor}, {Richards},
-  {Rix}, {Schneider}, \& {Zheng}}]{Inada:05}
-{Inada}, N., {Oguri}, M., {Keeton}, C.~R., {et~al.} 2005, \pasj, 57, L7,
-  astro-ph/0503310
-
-\bibitem[{{Keeton}(2003)}]{Keeton:03}
-{Keeton}, C.~R. 2003, \apj, 582, 17, astro-ph/0206243
-
-\bibitem[{{Kormendy} \& {Bender}(2009)}]{Kormendy:09}
-{Kormendy}, J., \& {Bender}, R. 2009, \apjl, 691, L142, 0901.3778
-
-\bibitem[{{Kormendy} \& {Ho}(2013)}]{Kormendy:13}
-{Kormendy}, J., \& {Ho}, L.~C. 2013, \araa, 51, 511, 1304.7762
-
-\bibitem[{{Kormendy} \& {Richstone}(1995)}]{Kormendy:95}
-{Kormendy}, J., \& {Richstone}, D. 1995, \araa, 33, 581
-
-\bibitem[{{Li} {et~al.}(2012){Li}, {Mao}, {Gao}, {Loeb}, \& {di
-  Stefano}}]{Li:12}
-{Li}, N., {Mao}, S., {Gao}, L., {Loeb}, A., \& {di Stefano}, R. 2012, \mnras,
-  419, 2424, 1110.0887
-
-\bibitem[{{Negrello} {et~al.}(2010){Negrello}, {Hopwood}, {De Zotti}, {Cooray},
-  {Verma}, {Bock}, {Frayer}, {Gurwell}, {Omont}, {Neri}, {Dannerbauer},
-  {Leeuw}, {Barton}, {Cooke}, {Kim}, {da Cunha}, {Rodighiero}, {Cox},
-  {Bonfield}, {Jarvis}, {Serjeant}, {Ivison}, {Dye}, {Aretxaga}, {Hughes},
-  {Ibar}, {Bertoldi}, {Valtchanov}, {Eales}, {Dunne}, {Driver}, {Auld},
-  {Buttiglione}, {Cava}, {Grady}, {Clements}, {Dariush}, {Fritz}, {Hill},
-  {Hornbeck}, {Kelvin}, {Lagache}, {Lopez-Caniego}, {Gonzalez-Nuevo}, {Maddox},
-  {Pascale}, {Pohlen}, {Rigby}, {Robotham}, {Simpson}, {Smith}, {Temi},
-  {Thompson}, {Woodgate}, {York}, {Aguirre}, {Beelen}, {Blain}, {Baker},
-  {Birkinshaw}, {Blundell}, {Bradford}, {Burgarella}, {Danese}, {Dunlop},
-  {Fleuren}, {Glenn}, {Harris}, {Kamenetzky}, {Lupu}, {Maddalena}, {Madore},
-  {Maloney}, {Matsuhara}, {Michaowski}, {Murphy}, {Naylor}, {Nguyen},
-  {Popescu}, {Rawlings}, {Rigopoulou}, {Scott}, {Scott}, {Seibert}, {Smail},
-  {Tuffs}, {Vieira}, {van der Werf}, \& {Zmuidzinas}}]{negrello:10}
-{Negrello}, M., {Hopwood}, R., {De Zotti}, G., {et~al.} 2010, Science, 330,
-  800, 1011.1255
-
-\bibitem[{{Rocha} {et~al.}(2013){Rocha}, {Peter}, {Bullock}, {Kaplinghat},
-  {Garrison-Kimmel}, {O{\~n}orbe}, \& {Moustakas}}]{Rocha:13}
-{Rocha}, M., {Peter}, A.~H.~G., {Bullock}, J.~S., {et~al.} 2013, \mnras, 430,
-  81, 1208.3025
-
-\bibitem[{{Thomas} {et~al.}(2014){Thomas}, {Saglia}, {Bender}, {Erwin}, \&
-  {Fabricius}}]{Thomas:14}
-{Thomas}, J., {Saglia}, R.~P., {Bender}, R., {Erwin}, P., \& {Fabricius}, M.
-  2014, \apj, 782, 39, 1311.3783
-
-\bibitem[{{Tremaine} {et~al.}(2002){Tremaine}, {Gebhardt}, {Bender}, {Bower},
-  {Dressler}, {Faber}, {Filippenko}, {Green}, {Grillmair}, {Ho}, {Kormendy},
-  {Lauer}, {Magorrian}, {Pinkney}, \& {Richstone}}]{Tremaine:02}
-{Tremaine}, S., {Gebhardt}, K., {Bender}, R., {et~al.} 2002, \apj, 574, 740,
-  astro-ph/0203468
-
-\bibitem[{{Vieira} {et~al.}(2010){Vieira}, {Crawford}, {Switzer}, {Ade},
-  {Aird}, {Ashby}, {Benson}, {Bleem}, {Brodwin}, {Carlstrom}, {Chang}, {Cho},
-  {Crites}, {de Haan}, {Dobbs}, {Everett}, {George}, {Gladders}, {Hall},
-  {Halverson}, {High}, {Holder}, {Holzapfel}, {Hrubes}, {Joy}, {Keisler},
-  {Knox}, {Lee}, {Leitch}, {Lueker}, {Marrone}, {McIntyre}, {McMahon}, {Mehl},
-  {Meyer}, {Mohr}, {Montroy}, {Padin}, {Plagge}, {Pryke}, {Reichardt}, {Ruhl},
-  {Schaffer}, {Shaw}, {Shirokoff}, {Spieler}, {Stalder}, {Staniszewski},
-  {Stark}, {Vanderlinde}, {Walsh}, {Williamson}, {Yang}, {Zahn}, \&
-  {Zenteno}}]{vieira:10}
-{Vieira}, J.~D., {Crawford}, T.~M., {Switzer}, E.~R., {et~al.} 2010, \apj, 719,
-  763, 0912.2338
-
-\bibitem[{{Vieira} {et~al.}(2013){Vieira}, {Marrone}, {Chapman}, {De Breuck},
-  {Hezaveh}, {Wei{$\beta$}}, {Aguirre}, {Aird}, {Aravena}, {Ashby}, {Bayliss},
-  {Benson}, {Biggs}, {Bleem}, {Bock}, {Bothwell}, {Bradford}, {Brodwin},
-  {Carlstrom}, {Chang}, {Crawford}, {Crites}, {de Haan}, {Dobbs}, {Fomalont},
-  {Fassnacht}, {George}, {Gladders}, {Gonzalez}, {Greve}, {Gullberg},
-  {Halverson}, {High}, {Holder}, {Holzapfel}, {Hoover}, {Hrubes}, {Hunter},
-  {Keisler}, {Lee}, {Leitch}, {Lueker}, {Luong-van}, {Malkan}, {McIntyre},
-  {McMahon}, {Mehl}, {Menten}, {Meyer}, {Mocanu}, {Murphy}, {Natoli}, {Padin},
-  {Plagge}, {Reichardt}, {Rest}, {Ruel}, {Ruhl}, {Sharon}, {Schaffer}, {Shaw},
-  {Shirokoff}, {Spilker}, {Stalder}, {Staniszewski}, {Stark}, {Story},
-  {Vanderlinde}, {Welikala}, \& {Williamson}}]{vieira:13}
-{Vieira}, J.~D., {Marrone}, D.~P., {Chapman}, S.~C., {et~al.} 2013, \nat, 495,
-  344, 1303.2723
-
-\bibitem[{{Wallington} \& {Narayan}(1993)}]{Wallington:93}
-{Wallington}, S., \& {Narayan}, R. 1993, \apj, 403, 517
-
-\bibitem[{{Wei{\ss}} {et~al.}(2013){Wei{\ss}}, {De Breuck}, {Marrone},
-  {Vieira}, {Aguirre}, {Aird}, {Aravena}, {Ashby}, {Bayliss}, {Benson},
-  {B{\'e}thermin}, {Biggs}, {Bleem}, {Bock}, {Bothwell}, {Bradford}, {Brodwin},
-  {Carlstrom}, {Chang}, {Chapman}, {Crawford}, {Crites}, {de Haan}, {Dobbs},
-  {Downes}, {Fassnacht}, {George}, {Gladders}, {Gonzalez}, {Greve},
-  {Halverson}, {Hezaveh}, {High}, {Holder}, {Holzapfel}, {Hoover}, {Hrubes},
-  {Husband}, {Keisler}, {Lee}, {Leitch}, {Lueker}, {Luong-Van}, {Malkan},
-  {McIntyre}, {McMahon}, {Mehl}, {Menten}, {Meyer}, {Murphy}, {Padin},
-  {Plagge}, {Reichardt}, {Rest}, {Rosenman}, {Ruel}, {Ruhl}, {Schaffer},
-  {Shirokoff}, {Spilker}, {Stalder}, {Staniszewski}, {Stark}, {Story},
-  {Vanderlinde}, {Welikala}, \& {Williamson}}]{Weiss:13}
-{Wei{\ss}}, A., {De Breuck}, C., {Marrone}, D.~P., {et~al.} 2013, \apj, 767,
-  88, 1303.2726
-
-\bibitem[{{Winn} {et~al.}(2004){Winn}, {Rusin}, \& {Kochanek}}]{Winn:04}
-{Winn}, J.~N., {Rusin}, D., \& {Kochanek}, C.~S. 2004, \nat, 427, 613,
-  astro-ph/0312136
-
-\end{thebibliography}
 
 \end{document}
