--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,20 @@
+@ARTICLE{Jackson:13,
+   author = {{Jackson}, N.},
+    title = "{Quasar lensing}",
+  journal = {Bulletin of the Astronomical Society of India},
+archivePrefix = "arXiv",
+   eprint = {1304.4172},
+ primaryClass = "astro-ph.CO",
+ keywords = {gravitational lensing, cosmology: observations, cosmological parameters, quasars: general, galaxies: general},
+     year = 2013,
+    month = mar,
+   volume = 41,
+    pages = {19},
+   adsurl = {http://adsabs.harvard.edu/abs/2013BASI...41...19J},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
 @ARTICLE{Li:12,
    author = {{Li}, N. and {Mao}, S. and {Gao}, L. and {Loeb}, A. and {di Stefano}, R.
 	},
