--- a/ms.tex
+++ b/ms.tex
@@ -120,10 +120,10 @@ In contrast to lensed quasars, these sources are extended over hundreds of parse
 \begin{figure}
 \begin{center}
 \centering
-\includegraphics[trim= 0 0 0 0, width=0.45\textwidth]{figures/f_02.eps}
+\includegraphics[trim= 10 0 0 0, clip, width=0.5\textwidth]{figures/f_02.eps}
 \centering
 \end{center}
-\caption{ illustration of the central image in 2 cases: 
+\caption{ Left panel shows the strongly lensed images of a background source, when the lensing potential is very steep and cuspy, resulting in large demagnification (and disappearance) of the central image.  The right panel shows images for the same lens parameters and a core of 400 pc. The red box is centered on the  central image.
 \label{fig1}}
 \end{figure}
 
@@ -238,7 +238,7 @@ We also find that when the core size is larger, the constraints on the density p
 \begin{figure}
 \begin{center}
 \centering
-\includegraphics[trim= 0 0 0 0, width=0.45\textwidth]{figures/f_04.eps}
+\includegraphics[trim= 2 5 0 0, clip, width=0.48\textwidth]{figures/f_04.eps}
 \centering
 \end{center}
 \caption{ Parameter covariance matrices for two simulations (after marginalization over nuisance parameters). Top panel shows that when the core size is small the mass of the SMBH is not measured and only an upper limit can be placed on it. The bottom panel, shows that for larger core sizes, the mass of the SMBH could be measured by high significance. 
@@ -274,7 +274,7 @@ We conclude that, only under rare conditions, and with very long observations ($
 \begin{figure}
 \begin{center}
 \centering
-\includegraphics[trim= 20 0 20 0, width=0.45\textwidth]{figures/f_05.eps}
+\includegraphics[trim= 20 0 20 0, width=0.46\textwidth]{figures/f_05.eps}
 \centering
 \end{center}
 \caption{ Lensing of a central image by two SMBHs with masses of $4\times 10^8M_{\odot}$. The left panel shows the simulated central image. The red crosses show the positions of the SMBHs. The white circle has a radius of 1 kpc  from the center of the galaxy. The right panel shows the same data after convolution with the ALMA beam. The beam is shown in the lower panel.
