--- a/ms.tex
+++ b/ms.tex
@@ -79,8 +79,8 @@ Moreover, if observed in the optical, absorption in the central dense regions of
 
 
 The individual behavior and statistical properties of central images in lensed populations have been extensively studied \citep[e.g.][]{Wallington:93, Evans:02, Keeton:03}. These studies show that central images could have a wide range of magnifications \citep[e.g.,][]{Keeton:03}. 
-Observational searches for these images have found a number of candidates \citep[e.g.][]{}. Although observations
-of central images in group and cluster lenses are not uncommon \citep[e.g.,][]{Inada:05}, only one secure detections of a central image of a galaxy-scale lens exists to date \citep{Winn:04}. To avoid the possibility of absorption in the lens, most searches have focused on lensed radio quasars and the radio spectrum of candidate central images have been used to distinguish them from potential faint emission from the lens galaxies.
+Observational searches for these images have found a number of candidates. Although observations
+of central images in group and cluster lenses are not uncommon \citep[e.g.,][]{Inada:08}, only one secure detections of a central image of a galaxy-scale lens exists to date \citep{Winn:04}. To avoid the possibility of absorption in the lens, most searches have focused on lensed radio quasars and the radio spectrum of candidate central images have been used to distinguish them from potential faint emission from the lens galaxies \citep[e.g.,][]{Zhang:07}.
 
 %To avoid confusion between a central image and faint radio emission from the lens galaxies 
 
