--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,20 @@
+@ARTICLE{Zhang:07,
+   author = {{Zhang}, M. and {Jackson}, N. and {Porcas}, R.~W. and {Browne}, I.~W.~A.
+	},
+    title = "{A search for the third lensed image in JVAS B1030+074}",
+  journal = {\mnras},
+   eprint = {astro-ph/0703226},
+ keywords = {gravitational lensing, galaxies: structure, galaxies: individual: JVAS B1030+074},
+     year = 2007,
+    month = jun,
+   volume = 377,
+    pages = {1623-1634},
+      doi = {10.1111/j.1365-2966.2007.11718.x},
+   adsurl = {http://adsabs.harvard.edu/abs/2007MNRAS.377.1623Z},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
 @ARTICLE{Jackson:13,
    author = {{Jackson}, N.},
     title = "{Quasar lensing}",
